apis/flights/route-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flights-ingress
  annotations:
    hub.traefik.io/api: flights-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`flights.airlines.EXTERNAL_IP.traefik.me`)
      services:
        - name: flights-app
          port: 3000
      tls:
        certResolver: traefik-airlines
