apis/flights/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: flights-ingress
  annotations:
    hub.traefik.io/api: flights-api
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`flights.airlines.traefik`) || Host(`flights.airlines.traefik.localhost`)
      services:
        - name: flights-app
          port: 3000
